# dlalg

./: .gitignore  CMakeLists.txt  README.md  output.json
app/defect_recognition/: body_keypoint.json  defect.json  meter_format.cpp  meter_format.h  meter_recognition.cpp  meter_recognition.h
app/face_recognition/: face_recognition.cpp  face_recognition.h
app/patrol_system/: defect_detector.cpp  defect_detector.h  defect_detector_c_api.cpp  defect_detector_c_api.h
config/: bashou.json  crnn.json  dbnet.json  dingdian_model.json  ep_keypoint.json  ep_yolov5.json  facerecongnition.json  huoyan_model.json  jufang.json  knob.json  knob_keypoint.json  ocr.json  oriented_rcnn.json  patrol_system.json  test.json  test2.json  trt_dlg.json  vocab.txt  wentie.json  xiyan_model.json  yolov5.json  yundong_model.json
examples/: test.py  test_crnn.cpp  test_dbnet.cpp  test_face_a200.cpp  test_face_alg.cpp  test_facecpp_alg.cpp  test_jufang.cpp  test_keypoint.cpp  test_keypoint_ep.cpp  test_knob.cpp  test_ocr.cpp  test_oriented.cpp  test_patrol_system.cpp  test_patrol_system_c.cpp  test_recognition_ep.cpp  test_scrfd.cpp  test_trt.cpp  test_u2net.cpp  test_u2net_c_api.cpp  test_ybkk.cpp  test_yolov5.cpp
include/: dl_algorithm.h
model/: fusion_result.json
source/: dl_alg_cls.cpp  dl_alg_cls.h  dl_alg_face_recognition.cpp  dl_alg_face_recognition.h  dl_alg_jufang.cpp  dl_alg_jufang.h  dl_alg_keypoint.cpp  dl_alg_keypoint.h  dl_alg_knob.cpp  dl_alg_knob.h  dl_alg_ocr.cpp  dl_alg_ocr.h  dl_alg_scrfd.cpp  dl_alg_scrfd.h  dl_alg_tensorrt.cpp  dl_alg_tensorrt.h  dl_alg_u2net.cpp  dl_alg_u2net.h  dl_algfactory.cpp  dl_algfactory.h  dl_algorithm.cpp  dl_ascendcl.cpp  dl_ascendcl.h  dl_common.h  dl_crnn.cpp  dl_crnn.h  dl_crnn_model.cpp  dl_crnn_model.h  dl_dbnet.cpp  dl_dbnet.h  dl_dbnet_model.cpp  dl_dbnet_model.h  dl_format.cpp  dl_format.h  dl_libtorch.cpp  dl_libtorch.h  dl_litehrnet_model.cpp  dl_litehrnet_model.h  dl_model.cpp  dl_model.h  (+20 more)
source/preprocess/: dl_bgr2rgb.cpp  dl_bgr2rgb.h  dl_normalize.cpp  dl_normalize.h  dl_pad.cpp  dl_pad.h  dl_resize.cpp  dl_resize.h  dl_transform.cpp  dl_transform.h
tools/onnx2trt/: CMakeLists.txt  a.out  calibrator.cpp  calibrator.h  oriented_rcnn_quantize.cpp
